@@ -1,19 +1,18 @@
 <?php
-/**Displays an album page
-*@link http://fdcl.sourceforge.net
-*@version 2.6.3b5
-*@author Will Entriken <cameralife@phor.net>
-*@copyright Copyright (c) 2001-2009 Will Entriken
-*@access public
-*/
-
 /**
+* Displays an album page
+* @link http://fdcl.sourceforge.net
+* @version 2.6.3b5
+* @author Will Entriken <cameralife@phor.net>
+* @copyright Copyright (c) 2001-2009 Will Entriken
+* @access public
 */
-  $features=array('database','theme');
-  require "main.inc";
 
-  $album = new Album($_GET['id']);
-  $album->Set('hits', $album->Get('hits') + 1);
+$features=array('database','theme');
+require "main.inc";
 
-  $album->ShowPage();
+$album = new Album($_GET['id']);
+$album->Set('hits', $album->Get('hits') + 1);
+
+$album->ShowPage();
 ?>
