@@ -1,39 +1,0 @@
-<html>
-<head>
-<link rel="stylesheet" type="text/css" href="common.css">
-<title>Camera Life Installation</title>
-</head>
-<body>
-
-<h1>How do Albums work?</h1>
-
-This page explains how Albums, the way to organize your photos, work. Your site will benefit greatly from the correct use of albums, because users will be interested in your site longer.
-
-<h2>Folders</h2>
-
-Folders are how files are organized on your computer, folder contain files and more folders. This is hierarichal. Camera Life supports organizing photos by folder, but folders are old news.
-
-<h2>What are Albums?</h2>
-
-In Camera Life, an Album is a way to keep similar photos together. An Album can be something like a certain person, a place, event, etc. 
-In this example, I have Albums of Harry (my friend), Bob (another friend), and Home. Albums are arranged into what we call topics.
-
-<center><img src="images/helpalbums.jpg"></center>
-
-<h2>What's so great about that?</h2>
-
-The great part about Albums is that they're automatic. Any time you name or rename a photo, if it belongs in any Albums, it will be added instantaneously. When you create an album, you set the "TERM" for that album. Any photos that contain TERM in their description will be part of the Album. Usually TERM will be the same for the NAME of an Album, but sometimes it might not be
-
-<h2>OK, how do I make Albums?</h2>
-
-<ul>
-<li>Login to your site, this is already done if your just finished the install.
-<li>You should first add a few photos into the system, and edit their descriptions.
-<li>Search for a word that is common in their descriptions. (<a href="../search.php" target="_blank">click here to search</a>)
-<li>Choose "Create an album of these photos" on the menu up top.
-<li>Fill in the requested fields
-<li>Go to <a href="../index.php" target="_blank">your site</a> to see how this album integrates with your site.
-</ul>
-
-</body>
-</html>
