@@ -192,6 +192,12 @@ CREATE TABLE `users` (
 ) ENGINE=MyISAM DEFAULT CHARSET=latin1 COMMENT='Users of the system';
 SET character_set_client = @saved_cs_client;
 
+
+INSERT INTO `preferences` VALUES('CameraLife','sitedate',NOW(),NOW());
+/* Then create a user on the site */
+/* UPDATE USERS set auth=5; */
+
+
 /*!40103 SET TIME_ZONE=@OLD_TIME_ZONE */;
 
 /*!40101 SET SQL_MODE=@OLD_SQL_MODE */;
