@@ -12,8 +12,9 @@
 * Rethemed Admin section, thanks Keith Bishop
 * Supports GPS in photo metadata, links to Google maps
 * Cleaned up RSS feed
-* Return 404 code for unfound photos
+* Return 404 code for unfound photos, albums, topics, folders
 * Added documentation for an external thumbnailing server
+* Link to online help from inside the site - for error messages
 
 2.6.2  Will Entriken <cameralife AT phor.net>
 * Website update, thanks to Rajesh Sundaram
